src/objects/Service_Code__c.object
<CustomObject>
    <description>Captures failure codes for Warranty parts and equipment claims</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Label__c</fullName>
        <formula>Parent__r.Label__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Service_Code__c</referenceTo>
        <relationshipLabel>Service Codes</relationshipLabel>
        <relationshipName>Service_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Unit</fullName>
                </value>
                <value>
                    <fullName>Unit</fullName>
                </value>
                <value>
                    <fullName>Mode</fullName>
                </value>
                <value>
                    <fullName>Type</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Specific</fullName>
                </value>
                <value>
                    <fullName>Warranty Class</fullName>
                </value>
                <value>
                    <fullName>Responsibility</fullName>
                </value>
                <value>
                    <fullName>Special Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Service_Code__c.Type__c</field>
                <operation>equals</operation>
                <value>Unit</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Service_Code__c</referenceTo>
        <relationshipLabel>Service Codes (Service Code)</relationshipLabel>
        <relationshipName>Unit_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warranty_Class_Type__c</fullName>
        <description>Created for the Warranty team</description>
        <inlineHelpText>This determines if the dollars and hours should be rolled up under Warranty or Sales Concession.</inlineHelpText>
        <label>Warranty Class Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Warranty</fullName>
                    <default>true</default>
                    <label>Warranty</label>
                </value>
                <value>
                    <fullName>Sales Concession</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Label__c</columns>
        <columns>Parent__c</columns>
        <columns>Parent_Label__c</columns>
        <columns>Type__c</columns>
        <columns>Unit_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>